@startuml

title  База данных
header Носаченко А.
footer Схема таблиц

skinparam defaultFontName VL Gothic


' = = = = = = = =
' = = = = = = = =
' = = = = = = = =


namespace MS_Members {

class Film_members
{
  + <font color="gold"      >serial_   id;

  + <font color="lightblue" >integer   idFilm;

  + <font color="lightgreen">integer   idMember;

  + <font color="lightgreen">integer   idProfession;
}

class Members
{
  + <font color="gold"      >serial_   id;

  + text___   nameRU;

  - text___   nameEN;

  + text___   text;

  - text___   imageName;
}

class Professions
{
  + <font color="gold"      >serial_   id;

  + text___   nameRU;

  + text___   nameEN;
}

}


' = = = = = = = =
' = = = MiS = = =
' = = = = = = = =


namespace MS_Films {

class Films
{
  + <font color="gold"      >serial_   id;

  + text___   nameRU;

  - text___   nameEN;

  + integer   year;

  + text___   ageRating;

  + integer   duration;

  - text___   imageName;

  - integer   rating;

  - integer   countRating;

  + <font color="lightgreen">integer   idCountry;
}

class Countries
{
  + <font color="gold"      >serial_   id;

  + text___   nameRU;

  + text___   nameEN;
}

class Film_genres
{
  + <font color="gold"      >serial_   id;

  + <font color="lightgreen">integer   idFilm;

  + <font color="lightgreen">integer   idGenre;
}

class Genres
{
  + <font color="gold"      >serial_   id;

  + text___   nameRU;

  + text___   nameEN;
}

}


' = = = = = = = =
' = = = MiS = = =
' = = = = = = = =


namespace MS_Film_info {

class Film_info
{
  + <font color="gold"      >serial_   id;

  + text___   text;

  - text___   trailerLink;

  + <font color="lightblue" >integer   idFilm;
}

}


' = = = = = = = =
' = = = MiS = = =
' = = = = = = = =


namespace MS_Profiles {

class Profiles
{
  + <font color="gold"      >serial_   id;

  + text___   profileName;

  - text___   imageName;

  + <font color="lightblue" >integer   idUser;
}

class Comments
{
  + <font color="gold"      >serial_   id;

  + <font color="lightblue" >integer   idFilm;

  + <font color="lightblue" >integer   idUser;

  - <font color="lightgreen">integer   idProfile;

  - text___   title;

  + text___   text;

  - integer   prevId;
}

class Rating_users
{
  + <font color="gold"      >serial_   id;

  - integer   rating;

  - <font color="lightblue" >integer   idFilm;

  - <font color="lightblue" >integer   idUser;
}

}


' = = = = = = = =
' = = = MiS = = =
' = = = = = = = =


namespace MS_Users {

class Users
{
  + <font color="gold"      >serial_   id;

  + text___   email;

  + text___   password;

  - <font color="lightgreen">integer   idRole;
}

class Roles
{
  + <font color="gold"      >serial_   id;

  + text___   name;

  - text___   description;
}

}


' = = = = = = = =
' = = = = = = = =
' = = = = = = = =


Film_members <|-- Members
Film_members <|-- Professions

Films        <|-- Countries
Film_genres  <|-- Films
Film_genres  <|-- Genres

Comments     <|-- Profiles

Users        <|-- Roles


' = = = = = = = =
' = = = RMQ = = =
' = = = = = = = =


Film_members <--o Films

Film_info    <--o Films

Rating_users <--o Films
Rating_users <--o Users

Comments     <--o Users
Comments     <--o Films

Profiles     <--o Users

@enduml